# shooting-video-overlay

./: .dockerignore  .env.example  .gitignore  README.md  bunfig.toml  docker-compose.prod.yml  docker-compose.yml  lefthook.yml  package.json  skills-lock.json
.agents/skills/shadcn/: SKILL.md  cli.md  customization.md  mcp.md
.agents/skills/shadcn/agents/: openai.yml
.agents/skills/shadcn/evals/: evals.json
.agents/skills/shadcn/rules/: base-vs-radix.md  forms.md  icons.md
.cursor/rules/: component-library.mdc
apps/analyzer/: Dockerfile  pyproject.toml
apps/analyzer/src/: config.py  db.py  detect.py  extract.py  params.py  pipeline.py  worker.py
apps/analyzer/tests/: synth.py  test_detect.py  test_extract.py  test_worker_integration.py
apps/api/: Dockerfile  drizzle.config.ts  package.json
apps/api/drizzle/meta/: 0000_snapshot.json
apps/api/src/: config.ts  index.ts  serializers.ts
apps/api/src/db/: client.ts  migrate.ts  schema.ts
apps/api/src/lib/: logger.ts
apps/api/src/routes/: jobs.ts  markers.ts  videos.ts
apps/api/src/services/: analysis.ts  ffprobe.ts  storage.ts
apps/web/: .cta.json  .env.example  Dockerfile  package.json  vite.config.ts
apps/web/src/: routeTree.gen.ts  router.tsx  styles.css
apps/web/src/components/: app-sidebar.tsx  compare-pane.tsx  shot-list.tsx  summary-card.tsx  video-overlay.tsx  video-player.tsx  waveform-timeline.tsx
apps/web/src/hooks/: use-undo-history.ts  use-video-time.ts
apps/web/src/lib/: api.ts  envs.ts  format.ts  logto.ts  (+2 more)
infra/docker/: entrypoint-api.sh  entrypoint-infisical.sh
(+5 files in other folders)
